[project]
name = "tkap"
version = "0.1.11"
description = "twisted, klein, and pipes"
authors = [
    {name = "Dustin Lennon",email = "dustin.lennon@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "idna (==3.10)",
    "jinja2 (==3.1.6)",
    "klein (==24.8.0)",
    "pyopenssl (==25.3.0)",
    "python-dotenv (==1.0.1)",
    "pyyaml (==6.0.2)",
    "service-identity (==24.2.0)",
    "twisted (==25.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    { path = "tests" }
]

[project.scripts]
installer = "tkap.cloudconf.installer:cli"
